fixed distorted images in three places

--- a/src/css/AvatarForm.css
+++ b/src/css/AvatarForm.css
@@ -38,5 +38,7 @@ form {
     display: flex;
 }
 
-
+.upload-avatar-button{
+    padding: var(--spacer-sm);
+}
 
