--- a/src/css/Portfolio.css
+++ b/src/css/Portfolio.css
@@ -62,8 +62,7 @@
     width: 33vw;
     height: 33vw;
     margin: 2.5vw;
-    /* max-width: 40vw;
-    min-width: 30vw; */
+    overflow: hidden;
     display: flex;
     align-items: center;
     border: 2px solid var(--colors-accent-light);
@@ -76,7 +75,6 @@
 
 .gallery-img {
     width: 100%;
-    height: 100%;
    
     /* margin: 2.5px; */
 }
